# swagger.yaml
@@ -246,13 +246,43 @@ paths:
       consumes:
       - "application/x-www-form-urlencoded"
       parameters:
-      - $ref: '#/parameters/Product'
+      - $ref: '#/parameters/ProductID'
       - $ref: '#/parameters/Content'
-      - $ref: '#/parameters/Parent_comment'
+      - $ref: '#/parameters/ParentCommentID'
       responses:
         200:
           description: Successful response
-   
+  /api/comments/{comment_id}:
+    delete:
+      tags: 
+        - "Comment"
+      summary: "Delete comment"
+      description: ""
+      parameters:
+        - name: comment_id
+          in: path
+          description: "Comment ID in comment table"
+          required: true
+          type: integer
+      responses:
+        200:
+          description: OK
+    put:
+      tags: 
+        - "Comment"
+      summary: "Edit comment"
+      description: ""
+      parameters:
+        - name: comment_id
+          in: path
+          description: "Comment ID in comment table"
+          required: true
+          type: integer
+      responses:
+        200:
+          description: OK
+    
+    
 
 securityDefinitions:
   petstore_auth:
@@ -290,9 +320,9 @@ parameters:
     in: formData
     type: string
     required: true
-  Product:
+  ProductID:
     name: product_id
-    in: formData
+    in: path
     type: integer
     required: true
   Content:
@@ -300,7 +330,7 @@ parameters:
     in: formData
     type: string
     required: true
-  Parent_comment:
+  ParentCommentID:
     name: parent_comment_id
     in: formData
     type: integer
